fix:исправлены замечания по форматированию